Test/git-issues/git-issue-327cir3.dfy.expect
git-issue-327cir3.dfy(4,7): Error: module definition contains a cycle (note: parent modules implicitly depend on submodules): module A -> import B -> module B -> import X -> module A
1 resolution/type errors detected in git-issue-327cir3.dfy
